# Reflect

./: .gitignore  .gitmodules  BuildProject.bat  CMakeCache.txt  CMakeLists.txt  GENERATE_PROJECT.bat  GENERATE_PROJECT.sh  LICENSE  README.md  Reflect.sln  premake5.lua
Reflect/: CMakeCache.txt  CMakeLists.txt  Reflect.vcxproj  Reflect.vcxproj.filters  cmake_install.cmake  premake5.lua
Reflect/inc/: Instrumentor.h  Reflect.h  ReflectStructs.h  TypeId.h
Reflect/inc/CodeGenerate/: CG_Utils.h  CodeGenerate.h  CodeGenerateHeader.h  CodeGenerateSource.h
Reflect/inc/CodeGenerate/CPP/: CG_CPP_Legacy.h  CG_CPP_TypeInfo.h
Reflect/inc/CodeGenerate/Headers/: CG_Header_Legacy.h  CG_Header_TypeInfo.h
Reflect/inc/Core/: Core.h  Defines.h  Enums.h  Log.h  ReflectObject.h  Util.h
Reflect/inc/FileParser/: FileParser.h  FileParserKeyWords.h  ParserStructs.h
Reflect/inc/Reflect/: Instrumentor.h  Reflect.h  ReflectStructs.h
Reflect/inc/Reflect/CodeGenerate/: CG_Utils.h  CodeGenerate.h  CodeGenerateHeader.h  CodeGenerateSource.h
Reflect/inc/Reflect/Core/: Core.h  Defines.h  Enums.h  Log.h  Util.h  (+1 more)
Reflect/inc/Structs/: FunctionInfo.h  FunctionPtrArgs.h  MemberInfo.h  Property.h  PropertyMeta.h  Type.h  TypeId.h  TypeInfo.h  TypeInfoRegistry.h
Reflect/src/: Reflect.h  ReflectStructs.cpp  ReflectStructs.h  TypeId.cpp
Reflect/src/CodeGenerate/: CG_Utils.cpp  CodeGenerate.cpp  CodeGenerate.h  CodeGenerateHeader.cpp  CodeGenerateHeader.h  CodeGenerateSource.cpp  CodeGenerateSource.h
Reflect/src/Core/: Compiler.h  Core.h  Enums.cpp  Enums.h  Log.cpp  ReflectObject.cpp  ReflectObject.h  Type.cpp  Util.cpp  Util.h
Reflect/src/FileParser/: File Parser.h  FileParser.cpp  FileParser.h
Reflect/src/Reflect/: ReflectStructs.cpp
Reflect/src/Structs/: FunctionInfo.cpp  MemberInfo.cpp  Property.cpp  PropertyMeta.cpp  Type.cpp  TypeId.cpp  TypeInfo.cpp  TypeInfoRegistry.cpp
(+69 files in other folders)
